--- a/src/assets/css/components/form.css
+++ b/src/assets/css/components/form.css
@@ -15,16 +15,16 @@
 .form-textarea,
 .form-select,
 .form-multiselect {
-  @apply appearance-none tracking-wide outline-none placeholder:font-light focus:outline-none;
+  @apply !appearance-none !tracking-wide !outline-none placeholder:font-light focus:outline-none;
   contain: paint;
 }
 
 .form-select {
-  @apply bg-center bg-no-repeat;
+  @apply !bg-center !bg-no-repeat;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewbox='0 0 20 20'%3e%3cpath stroke='%235C6B8A' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
-  background-position: right 0.5rem center;
-  background-size: 1.5em 1.5em;
-  print-color-adjust: exact;
+  background-position: right 0.5rem center !important;
+  background-size: 1.5em 1.5em !important;
+  print-color-adjust: exact !important;
 }
 
 .form-multiselect {
