--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,7 @@
 
 
 @import "./assets/css/fontawesome-all.css";
+@import "./assets/scss/tailwind.css";
+@import "./assets/scss/components/tiny-slider.css";
+
 /* @import "~highlight.js/styles/atom-one-dark.css"; */
